# BioMedKG

./: .env-example  .env-kge  .env-kge-train  .gitignore  .pre-commit-config.yaml  Makefile  README.md  kge.py  pyproject.toml  requirements.txt  test_dpi.py  train_dpi.py  train_gcl.py  train_kge.py
biomedkg/: benchmark_module.py  data_module.py  gcl_module.py  kge_module.py  modality.py
biomedkg/configs/: __init__.py  data.py  gcl.py  kge.py  kge_train.py  node.py  train.py
biomedkg/data/: __init__.py  node.py
biomedkg/data/dataset/: __init__.py  _base.py  biokg.py
biomedkg/modules/: __init__.py  data.py  decoder.py  embed.py  encoder.py  fusion.py  gcl.py  metrics.py  node.py  utils.py
configs/: config.yaml  dpi.yaml  gcl.yaml  kge.yaml
configs/data/: dpi.yaml  primekg.yaml
configs/lm_modality/: dpi_modality.yaml  primekg_modality.yaml
configs/model/: base.yaml  gcl.yaml  kge.yaml
scripts/: cross_val.py  dpi.sh  gcl.sh  get_embedding_from_ckpt.py  get_modality_embedding.py  kge.sh  run_benchmark.py  test_dpi.sh  test_kge.sh  train_gcl.py  train_kge.py
scripts/test/: test_gcl.sh
